--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ecommerce-react",
   "version": "1.2.0",
   "main": "index.js",
-  "author": "Julius Guevarra",
+  "author": "Wilson LLuilema ,Maria Jose Tapia ,Lisbeth Soria",
   "keywords": [
     "react-webpack",
     "boilerplate",
