--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
     "serve": "vite preview",
     "test": "cross-env NODE_ENV=test jest --config=jest.config.json"
   },
+  "jest": {
+    "moduleNameMapper": {
+      "^@(.*)$": "<rootDir>/src$1",
+      
+      "\\.(gif|ttf|png|svg)$": "<rootDir>/src/test/__mocks__/fileMock.js"
+    }
+  },
   "devDependencies": {
     "@vitejs/plugin-react": "^2.0.0",
     "copy-webpack-plugin": "^8.1.1",
@@ -54,9 +61,11 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "@babel/preset-react": "^7.18.6",
     "firebase": "^8.4.3",
     "formik": "^2.2.6",
     "history": "^4.10.0",
+    "identity-obj-proxy": "^3.0.0",
     "moment": "^2.29.1",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
