--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "dev": "vite",
     "build": "vite build  && cd dist && cp index.html 404.html",
     "serve": "vite preview",
-    "test": "cross-env NODE_ENV=test jest --config=jest.config.json"
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
+    "cypress:open": "cypress open"
   },
   "jest": {
     "moduleNameMapper": {
       "^@(.*)$": "<rootDir>/src$1",
-      
       "\\.(gif|ttf|png|svg)$": "<rootDir>/src/test/__mocks__/fileMock.js"
     }
   },
@@ -62,6 +62,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@babel/preset-react": "^7.18.6",
+    "cypress": "^12.3.0",
     "firebase": "^8.4.3",
     "formik": "^2.2.6",
     "history": "^4.10.0",
